change to chrome

--- a/config/config.properties
+++ b/config/config.properties
@@ -1,5 +1,5 @@
-driverPath=C:\\Users\\John\\eclipse-workspace\\drivers\\MicrosoftWebDriver.exe
-driverProperty=webdriver.edge.driver
+driverPath=C:\\Users\\John\\eclipse-workspace\\drivers\\chromedriver.exe
+driverProperty=webdriver.edge.chrome
 url=https://www.pensionwise.gov.uk/en
-browser=edge
+browser=chrome
 windowMaxSize=max
