--- a/config/config.properties
+++ b/config/config.properties
@@ -1,5 +1,5 @@
 driverPath=C:\\Users\\John\\eclipse-workspace\\drivers\\chromedriver.exe
-driverProperty=webdriver.edge.chrome
+driverProperty=webdriver.chrome.driver
 url=https://www.pensionwise.gov.uk/en
 browser=chrome
 windowMaxSize=max
