min size window

--- a/config/config.properties
+++ b/config/config.properties
@@ -2,4 +2,4 @@ driverPath=C:\\Users\\John\\eclipse-workspace\\drivers\\chromedriver.exe
 driverProperty=webdriver.chrome.driver
 url=https://www.pensionwise.gov.uk/en
 browser=chrome
-windowMaxSize=max
+windowMaxSize=min
